message, header, queryparams variables for template plugin, json and xml samples, constants, refactorings (#445)